bug 442659 - Alt value overrides aria-labelledby text for image based controls, r=aaronlev